# planetapeia-desfiles

./: .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yaml  fly.toml  pyproject.toml  update_version.py
.github/workflows/: django.yml
planetapeia_desfiles/: .pre-commit-config.yaml  Taskfile.yml  manage.py
planetapeia_desfiles/desfiles/: admin.py  apps.py  models.py  models_utils.py  navbar.py  roles.py  signals.py  urls.py  version.py
planetapeia_desfiles/desfiles/admins/: config.py  convite.py  desfile.py  grupo.py  inscricao_desfile.py  localizacao.py  pessoa.py  revisao_senha.py  staff.py  traje.py  user_messages.py  veiculo.py
planetapeia_desfiles/desfiles/middlewares/: location_middleware.py  password_recovery_middleware.py  pessoa_middleware.py
planetapeia_desfiles/desfiles/migrations/: 0001_initial.py  0002_desfile_veiculos_alter_pessoa_altura_and_more.py  0003_desfile_confirmado.py  0004_desfile_aprovador_desfile_data_aprovacao.py  0005_pessoa_padrinho_traje_trajeinventario_trajehistorico_and_more.py  0006_traje_genero.py  0007_alter_trajeinventario_num_inventario.py  0008_alter_trajetaxa_traje.py  0009_convite_inscricaodesfile_convite.py  0010_convite_convidados_confirmados_alter_convite_hash_and_more.py  0011_inscricaodesfile_tipo_pessoa.py  0012_staffpadraoveiculo.py  0013_alter_staffpadraoveiculo_veiculo_staffpadrao.py  0014_pessoastaff_alter_staffpadrao_options_and_more.py  0015_alter_staffpadrao_unique_together.py  0016_pessoa_foto.py  (+25 more)
planetapeia_desfiles/planetapeia_desfiles/: asgi.py  settings.py  urls.py  wsgi.py
(+110 files in other folders)
